@@ -92,6 +92,24 @@ public class DistributedFileSystem extends FileSystem {
     super.checkPath(path);
   }
 
+  /** Normalize paths that explicitly specify the default port. */
+  public Path makeQualified(Path path) {
+    URI thisUri = this.getUri();
+    URI thatUri = path.toUri();
+    String thatAuthority = thatUri.getAuthority();
+    if (thatUri.getScheme() != null
+        && thatUri.getScheme().equalsIgnoreCase(thisUri.getScheme())
+        && thatUri.getPort() == NameNode.DEFAULT_PORT
+        && thisUri.getPort() == -1
+        && thatAuthority.substring(0,thatAuthority.indexOf(":"))
+        .equalsIgnoreCase(thisUri.getAuthority())) {
+      path = new Path(thisUri.getScheme(), thisUri.getAuthority(),
+                      thatUri.getPath());
+    }
+    return super.makeQualified(path);
+  }
+
+
   public Path getWorkingDirectory() {
     return workingDir;
   }
